--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -5,7 +5,7 @@
         <!--        <link rel="icon" href="/favicon.ico" />-->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Leaderboard analytics for RetroMMO." />
-        <link rel="stylesheet" href="/static/css/icofont.min.css">
+        <link rel="stylesheet" href="/static/css/icofont.min.css" />
         <title>PetRock.gg | Leaderboards</title>
     </head>
     <body>
