--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <!--        <link rel="icon" href="/favicon.ico" />-->
+        <link rel="icon" href="/static/img/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Leaderboard analytics for RetroMMO." />
         <link rel="stylesheet" href="/static/css/icofont.min.css" />
