--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -5,8 +5,20 @@
         <link rel="icon" href="/static/img/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Leaderboard analytics for RetroMMO." />
+
+        <link type="application/json+oembed" href="/static/meta/oembed.json" />
+
+        <meta content="PetRock.gg -- Leaderboard Analytics & Game Database" property="og:title" />
+        <meta
+            content="Min-max your gameplay and squeeze every drop of blood from that rock using all the data, tools, and analytics provided by PetRock!"
+            property="og:description"/>
+        <meta content="PetRock" property="og:site_name" />
+        <meta content="/static/img/android-chrome-192x192.png" property="og:image" />
+        <meta name="theme-color" content="#377dbe">
+        
+
         <link rel="stylesheet" href="/static/css/icofont.min.css" />
-        <title>PetRock.gg | Leaderboards</title>
+        <title>PetRock.gg</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
