--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8" />
         <link rel="icon" href="/static/img/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Leaderboard analytics for RetroMMO." />
+        <meta name="description" content="Leaderboard Analytics & Game Database for RetroMMO." />
 
         <link type="application/json+oembed" href="/static/meta/oembed.json" />
 
-        <meta content="PetRock.gg -- Leaderboard Analytics & Game Database" property="og:title" />
+        <meta content="Leaderboard Analytics & Game Database for RetroMMO" property="og:title" />
         <meta
-            content="Min-max your gameplay and squeeze every drop of blood from that rock using all the data, tools, and analytics provided by PetRock!"
+            content="We do a little min-maxing around here."
             property="og:description"/>
-        <meta content="PetRock" property="og:site_name" />
+        <meta content="petrock.gg" property="og:site_name" />
         <meta content="/static/img/rock_border_enhanced.png" property="og:image" />
         <meta name="theme-color" content="#377dbe">
         
