Code cleanup. Added basic JSDoc.

--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -9,13 +9,10 @@
         <link type="application/json+oembed" href="/static/meta/oembed.json" />
 
         <meta content="Leaderboard Analytics & Game Database for RetroMMO" property="og:title" />
-        <meta
-            content="We do a little min-maxing around here."
-            property="og:description"/>
+        <meta content="We do a little min-maxing around here." property="og:description" />
         <meta content="petrock.gg" property="og:site_name" />
         <meta content="/static/img/rock_border_enhanced.png" property="og:image" />
-        <meta name="theme-color" content="#377dbe">
-        
+        <meta name="theme-color" content="#377dbe" />
 
         <link rel="stylesheet" href="/static/css/icofont.min.css" />
         <title>PetRock.gg</title>
