--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -8,8 +8,8 @@
 
         <link type="application/json+oembed" href="/static/meta/oembed.json" />
 
-        <meta content="Leaderboard Analytics & Game Database for RetroMMO" property="og:title" />
-        <meta content="We do a little min-maxing around here." property="og:description" />
+        <meta content="RetroMMO Leaderboard Analytics" property="og:title" />
+        <meta content="We do a little min-maxing." property="og:description" />
         <meta content="petrock.gg" property="og:site_name" />
         <meta content="/static/img/rock_border_enhanced.png" property="og:image" />
         <meta name="theme-color" content="#377dbe" />
