--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
-        <link rel="manifest" href="/static/meta/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png" />
+        <link rel="manifest" href="/static/meta/site.webmanifest" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Leaderboard Analytics & Game Database for RetroMMO." />
@@ -20,7 +20,7 @@
         <meta name="theme-color" content="#377dbe" />
 
         <link rel="stylesheet" href="/static/css/icofont.min.css" />
-        
+
         <title>PetRock.gg</title>
     </head>
     <body>
